# OpenDB

./: CMakeLists.txt  sync_and_merge.sh
src/swig/python/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/utility/include/utility/: MakeLogger.h
src/utility/src/: MakeLogger.cpp
